<resources>
    <string name="app_name">SOPT_1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="github_id">깃허브 아이디</string>
    <string name="input_id">ID를 입력해주세요</string>
    <string name="password">비밀번호</string>
    <string name="input_pw">비밀번호를 입력해주세요</string>
    <string name="user_name">이름</string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="login">LOGIN</string>
    <string name="check_id_pw">아이디/비밀번호가 없으신가요?</string>
    <string name="sign_up_kor">회원가입</string>
    <string name="sign_up_eng">SIGNUP</string>
    <string name="my_github_id">HJinhee</string>
    <string name="my_name">Han Jinhee</string>
    <string name="introduce_1">BE SOPT 28기 YBBE SOPT 28기 YBBE SOPT 28기 YBBE SOPT 28기
                 YBBE SOPT 28기 YBBE SOPT 28기 YBBE SOPT 28기 YBBE SOPT 28기 YBBE SOPT 28기
                  YBBE SOPT 28기 YBBE SOPT 28기 YBBE SOPT 28기 YBBE SOPT 28기 YBBE SOPT 28기
                  YBBE SOPT 28기 YBBE SOPT 28기 YBBE SOPT 28기 YBBE SOPT 28기 YB</string>
    <string name="following_view">팔로잉 화면</string>
    <string name="user_id">userId</string>
    <string name="more">MORE</string>
    <string name="repository_name">레포지터리 이름</string>
    <string name="repository_info">레포지터리 설명</string>
    <string name="language">언어</string>

</resources>